added production files and fixed modal border tops for patient2 and 3

--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -112,7 +112,7 @@
 <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-body">
+      <div class="modal-body pat2">
         <h2><span class="pink-hl">Correct</span>. The area you clicked on indicates abnormal breast tissue.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
@@ -124,7 +124,7 @@
 <div class="modal fade" id="modalIncorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-body">
+      <div class="modal-body pat2">
         <h2>Incorrect. The area you clicked on indicates normal breast tissue. Please try again.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
