--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -104,7 +104,7 @@
                  <div class="modal fade" id="modalCorrect2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat2">
                          <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a pea.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -116,7 +116,7 @@
                  <div class="modal fade" id="modalIncorrect1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat2">
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -128,7 +128,7 @@
                  <div class="modal fade" id="modalIncorrect2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat2">
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -140,7 +140,7 @@
                  <div class="modal fade" id="modalIncorrect3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat2">
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
