--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -74,7 +74,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat2">
         <h2>Incorrect. Michele’s tissue sample does not contain brown coloring. Her ER test is negative.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
@@ -91,7 +91,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat2">
         <h2><span class="pink-hl">Correct</span>. Michele’s tissue sample does not contain brown coloring. Her ER test is negative.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
