--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -65,7 +65,7 @@
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat3">
         <h2>Incorrect. The ratio of red dots to green dots is less than 2, so Brittany’s results are not amplified.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
@@ -82,7 +82,7 @@
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat3">
         <h2><span class="pink-hl">Correct</span>. The ratio of red dots to green dots is less than 2, so Brittany’s results are not amplified.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
