--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -109,7 +109,7 @@
                  <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat3">
                          <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a walnut.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -121,7 +121,7 @@
                  <div class="modal fade" id="modalIncorrect1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat3">
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -133,7 +133,7 @@
                  <div class="modal fade" id="modalIncorrect2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat3">
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -145,7 +145,7 @@
                  <div class="modal fade" id="modalIncorrect3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat3">
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
