--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -72,7 +72,7 @@ Brittany’s tissue sample has been sent for ER testing.
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat3">
         <h2><span class="pink-hl">Correct</span>. Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
@@ -89,7 +89,7 @@ Brittany’s tissue sample has been sent for ER testing.
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat3">
         <h2>Incorrect. Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
