--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -64,7 +64,7 @@
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat2">
         <h2><span class="pink-hl">Correct</span>. The ratio of red dots to green dots is greater than 2, so Michele’s results are amplified.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
@@ -81,7 +81,7 @@
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat2">
         <h2>Incorrect. The ratio of red dots to green dots is greater than 2, so Michele’s results are amplified.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
