--- a/src/javascript/templates/patient2/patient2view4.hbs
+++ b/src/javascript/templates/patient2/patient2view4.hbs
@@ -65,7 +65,7 @@ Click below to make your selection for next steps.
                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat2">
                        <h2>You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
