--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -101,7 +101,7 @@ Be sure to record the information in your Lab Handbook.
       <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
-            <div class="modal-body">
+            <div class="modal-body pat3">
               <h2><span class="pink-hl">Correct</span>. The area you clicked on indicates abnormal breast tissue.</h2>
             </div>
             <div class="modal-footer background-nav-blue">
@@ -113,7 +113,7 @@ Be sure to record the information in your Lab Handbook.
       <div class="modal fade" id="modalIncorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
-            <div class="modal-body">
+            <div class="modal-body pat3">
               <h2>Incorrect. The area you clicked on indicates normal breast tissue. Please try again.</h2>
             </div>
             <div class="modal-footer background-nav-blue">
