--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -77,7 +77,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat3">
         <h2>Incorrect. This tissue sample does contain cancer cells.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
@@ -94,7 +94,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat3">
         <h2><span class="pink-hl">Correct</span>. Yes, this tissue sample contains cancer cells. Based on the biopsy, Brittany had a left breast lumpectomy and lymph node biopsy.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
