--- a/src/javascript/templates/patient3/patient3view9.hbs
+++ b/src/javascript/templates/patient3/patient3view9.hbs
@@ -70,7 +70,7 @@ Do you have enough information to make a recommendation for treatment or do you 
                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat3">
                        <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
