--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -115,7 +115,7 @@
                 <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a walnut.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
+                <a href="/patient1view6" data-navigate="patient1view6" class="continue close-modal"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
             </div>
           </div>
