--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -43,3 +43,93 @@ body {
     color: black;
 
 }
+// I will style this shit eventually.
+
+$orange: #F5852B;
+
+body{
+  background: #313131;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  overflow: hidden;
+}
+#region-main {
+  	background: linear-gradient(to left top, $orange 0%, #DD4400 100%);
+    height: 80vh;
+    width: 90vw;
+    border-radius: .5%;
+    padding: 22% 10%;
+    box-shadow: black 4px 4px 25px;
+    position: relative;
+}
+ul{
+	padding: 0;
+	margin: 0;
+}
+
+li{
+	list-style: none;
+	margin-bottom: .5rem;
+}
+
+.quiz-header{
+	padding-bottom: 2rem;
+	text-align: center;
+	color: white;
+
+	h1{
+		margin: 0;
+    font-size: 55px;
+    text-transform:uppercase;
+	}
+}
+
+.quiz__container{
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	max-width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: transparent;
+	padding: 2rem;
+	border-radius: .7rem;
+}
+
+.quiz__content, .quiz__nav{
+	width: 100%;
+}
+
+.question__top{
+	h2{
+		margin: 0;
+	}
+}
+.question__bottom{
+	margin: 1rem 0;
+}
+
+
+
+.btn-warning {
+  padding:1rem 4rem;
+  font-size: 25px;
+  border-bottom: 5px solid #D66A00;
+  outline:none;
+  margin: 0 2em;
+  text-transform:uppercase;
+
+}
+
+.quiz__container {
+  position: relative;
+}
+
+#quizNavigation {
+  text-align: center;
+}
